the one and only commit

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -26,14 +26,14 @@
       .text
         Matteo Melani
         %br
-        =link_to "@matteomelani", "#"
+        =link_to "@", "#"
     .card
       .avatar
         =image_tag "user_medium.png"
       .text
         Laurent Devonue
         %br
-        =link_to "@matteomelani", "#"
+        =link_to "@", "#"
   .team
     .title
       Advisors
@@ -43,11 +43,11 @@
       .text
         Marc Phillips
         %br
-        =link_to "@matteomelani", "#"
+        =link_to "@", "#"
     .card
       .avatar
         =image_tag "user_medium.png"
       .text
         Amy Staas
         %br
-        =link_to "@matteomelani", "#"
+        =link_to "@", "#"
